--- a/quiz-form/src/components/InfoCard.css
+++ b/quiz-form/src/components/InfoCard.css
@@ -1,3 +1,17 @@
+* {
+  font-size: medium;
+}
+
+a {
+  font-size: small;
+}
+
+::placeholder {
+  /* Most modern browsers support this now. */
+  color: #000000;
+  font-weight: bold;
+}
+
 .card {
   padding-right: 10vh;
   padding-left: 10vh;
