--- a/quiz-form/src/components/Header.css
+++ b/quiz-form/src/components/Header.css
@@ -1,14 +1,12 @@
 .back {
   background-color: #eaeaea;
   min-height: 20vh;
-}
-
-.welcome {
-  min-height: 10vh;
+  margin-bottom: 5vh;
 }
 
 .items {
   padding-top: 5vh;
+  min-height: 10vh;
 }
 
 h1 {
