--- a/quiz-form/src/components/Sidebar.css
+++ b/quiz-form/src/components/Sidebar.css
@@ -1,10 +1,4 @@
-.button {
-  display: inline-block;
-  border-radius: 60px;
-  box-shadow: 0px 0px 2px #eaeaea;
-  padding: 0.5em 0.6em;
-  background-color: #eaeaea;
-  border-color: #eaeaea;
-  color: black;
-  margin: 3px;
+.bgroup {
+  display: flex;
+  flex-direction: column;
 }
